refactorizando y agregando validaciones